--- a/src/bio.html
+++ b/src/bio.html
@@ -12,7 +12,7 @@
 
 <div class="contenu">
   <h1 class="biotitle">{{ metadata.titre }}</h1>
-  <div><img src="/img/bio.jpg" width="280" alt="Portrait de {{ metadata.titre }}" /></div>
+  <div><img src="/img/bio.jpg" height="220" alt="Portrait de {{ metadata.titre }}" /></div>
   <p class="biodescription">{{ metadata.text }}</p>
 </div>
 </body>
